# avm-rs

./: .taplo.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  rustfmt.toml  test_dup2_simple.rs
.github/workflows/: ci.yml  pr.yml  security.yml
examples/: README.md  basic.teal  basic_arithmetic.rs  control_flow.rs  crypto_operations.rs  simple_test.rs  simple_tracing.rs  smart_contract.rs  teal_assembly.rs  transaction_fields.rs
src/: error.rs  lib.rs  main.rs  types.rs  varuint.rs
src/assembler/: mod.rs
src/cli/: mod.rs
src/cli/commands/: assemble.rs  disassemble.rs  examples.rs  execute.rs  info.rs  mod.rs  repl.rs  validate.rs
src/crypto/: mod.rs
src/opcodes/: argument.rs  arithmetic.rs  box_storage.rs  bytes.rs  constant.rs  constants.rs  crypto.rs  data.rs  elliptic_curve.rs  flow.rs  functions.rs  inner_transactions.rs  mod.rs  stack.rs  state.rs  transaction.rs
src/state/: mod.rs
src/tracing/: mod.rs
src/vm/: mod.rs
tests/: constant_blocks.rs  lib.rs
tests/common/: mod.rs
tests/opcodes/: arithmetic.rs  arithmetic_tests.rs  constants_tests.rs  crypto.rs  crypto_tests.rs  flow_tests.rs  integration.rs  integration_tests.rs  stack_tests.rs  state.rs  state_tests.rs  transaction_tests.rs
tests/property/: mod.rs  stack_invariants.rs
