[package]
edition = "2024"
name = "rust-avm"
version = "0.1.0"

[dependencies]
anyhow = "1.0"
ed25519-dalek = "2.0"
hex = "0.4"
k256 = "0.13"
num-bigint = "0.4"
num-traits = "0.2"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
sha3 = "0.10"
thiserror = "1.0"

[dev-dependencies]
proptest = "1.0"
tokio = { version = "1.0", features = ["full"] }
